# guardrail3

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GUARDRAIL3_GUIDE.md  LICENSE-APACHE  MIGRATION_REPORT.md  NPM_PUBLISHING.md  README.md  clippy.toml  code-sessions  deny.toml  fixture3.yaml  goldencheck.yaml  guardrail3.toml  release-plz.toml  rustfmt.toml
.plans/prototypes/lingua-language-detection/: Cargo.toml  README.md
.plans/prototypes/lingua-language-detection/src/: main.rs
apps/guardrail3/: Cargo.toml  README.md  clippy.toml  deny.toml
apps/guardrail3-rs/: Cargo.toml  guardrail3-rs.toml
apps/guardrail3-rs/crates/logic/family-runner-policy/: Cargo.toml
apps/guardrail3-rs/crates/logic/family-runner-process/: Cargo.toml
apps/guardrail3-rs/crates/logic/family-runner-quality/: Cargo.toml
apps/guardrail3-rs/crates/logic/family-runner-structure/: Cargo.toml
apps/guardrail3-rs/crates/logic/family-runner-style/: Cargo.toml
apps/guardrail3-rs/crates/logic/family-runner-test/: Cargo.toml
apps/guardrail3-rs/crates/logic/validate-command/: Cargo.toml
apps/guardrail3-rs/crates/types/app-types/: Cargo.toml
apps/guardrail3-ts/: .dupes-ignore.toml  Cargo.toml  deny.toml  guardrail3-rs.toml
apps/guardrail3-ts/crates/logic/family-runner-config/: Cargo.toml
apps/guardrail3-ts/crates/logic/family-runner-hooks/: Cargo.toml
apps/guardrail3-ts/crates/logic/family-runner-structure/: Cargo.toml
apps/guardrail3-ts/crates/types/app-types/: Cargo.toml
apps/guardrail3/.cargo/: mutants.toml
apps/guardrail3/.githooks/: pre-commit
apps/guardrail3/.worklogs/: 2026-04-02-182922-fix-test-compilation.md
apps/guardrail3/crates/: cli.rs  lib.rs  main.rs
apps/guardrail3/crates/adapters/outbound/: fs.rs
apps/guardrail3/crates/app/: arch_helpers.rs  project_map.rs
apps/guardrail3/crates/app/arch-helpers/: Cargo.toml
apps/guardrail3/crates/app/commands/: Cargo.toml
apps/guardrail3/crates/app/core/: Cargo.toml  crawl.rs  discover.rs  discover_tests.rs  gitignore.rs  mod.rs  project_map.rs  project_walker.rs  project_walker_lossless_tests.rs  project_walker_tests.rs  validation_target.rs
apps/guardrail3/crates/app/hexarch-helpers/: Cargo.toml
apps/guardrail3/crates/app/hooks/: Cargo.toml  deploy_checks.rs  hook_checks.rs  hook_script_checks.rs  mod.rs  tool_checks.rs  validate.rs
apps/guardrail3/crates/app/rs/: Cargo.toml  README.md  mod.rs  runtime.rs  runtime_tests.rs
apps/guardrail3/crates/app/topology-helpers/: Cargo.toml
apps/guardrail3/crates/app/ts/: Cargo.toml  mod.rs
apps/guardrail3/crates/commands/: generate.rs  generate_helpers.rs  init.rs  validate.rs
apps/guardrail3/crates/commands/coverage/: jscpd.rs  npmrc.rs  rust_toolchain.rs  stylelint.rs
apps/guardrail3/crates/domain/: mod.rs  project_tree.rs  project_tree_tests.rs
apps/guardrail3/crates/domain/config/: Cargo.toml  mod.rs  types.rs
apps/guardrail3/crates/domain/modules/: Cargo.toml  canonical.rs  clippy.rs  cspell.rs  cspell_tests.rs  deny.rs  eslint.rs  guide.rs  mod.rs  release.rs
apps/guardrail3/crates/domain/project-tree/: Cargo.toml
apps/guardrail3/crates/domain/report/: Cargo.toml  mod.rs  report_tests.rs
apps/guardrail3/crates/domain/validation-model/: Cargo.toml
apps/guardrail3/crates/shared/fs/: Cargo.toml
apps/guardrail3/golden-tests/: compare.sh  run-golden.sh
apps/guardrail3/golden-tests/golden/: external-schedulr.json
apps/guardrail3/local/: deny-skip.toml
apps/guardrail3/src/: cli.rs  help_gen.rs  lib.rs  main.rs
apps/guardrail3/src/app/: crawl.rs  discover.rs  gitignore.rs  mod.rs  project_map.rs
apps/guardrail3/src/app/hooks/: deploy_checks.rs  hook_checks.rs  hook_script_checks.rs  mod.rs  tool_checks.rs  validate.rs
apps/guardrail3/src/commands/: check.rs  diff.rs  generate.rs  init.rs  map.rs  mod.rs  validate.rs
apps/guardrail3/src/commands/coverage/: clippy.rs  cspell.rs  deny.rs  engine.rs  eslint.rs  jscpd.rs  mod.rs  npmrc.rs  prettier.rs  rust_toolchain.rs  rustfmt.rs  stylelint.rs  tsconfig.rs
apps/guardrail3/src/domain/: report.rs
apps/guardrail3/src/domain/config/: types.rs
apps/guardrail3/src/domain/modules/: canonical.rs  clippy.rs  cspell.rs  deny.rs  eslint_tests.rs  guide.rs  mod.rs  pre_commit.rs  stylelint.rs
apps/guardrail3/src/report/: json.rs  markdown.rs  text.rs
apps/guardrail3/tests/: adversarial_broken_configs.rs  adversarial_categories.rs  adversarial_config_tests.rs  adversarial_deep_nesting.rs  adversarial_diff_detection.rs  adversarial_fixtures.rs  adversarial_generate.rs  adversarial_grep_attacks.rs  adversarial_init_roundtrip.rs  adversarial_nightmare_monorepo.rs  adversarial_path_resolution.rs  adversarial_ts_eslint.rs  adversarial_ts_generate.rs  adversarial_ts_plugins.rs  adversarial_ts_stylelint.rs  adversarial_ts_tools.rs  adversarial_type_detection.rs  adversarial_ws_discovery.rs  cli_tests.rs  property_tests.proptest-regressions  property_tests.rs  unit.rs
apps/guardrail3/tests/fixtures/adversarial/: allow_in_macro.rs  allow_multiline.rs  allow_no_reason.rs  clean_file.rs  direct_std_fs.rs  file_too_long.rs  garde_skip_no_reason.rs  has_todo.rs  has_unsafe.rs  has_unwrap.rs  unicode_allow.rs
apps/guardrail3/tests/golden-tests/: compare.sh  run-golden.sh
apps/guardrail3/tests/unit/: allow_checks_test.rs  ast_helpers_test.rs  ast_visitors_test.rs  code_quality_checks_test.rs  deny_inventory_test.rs  dependency_allowlist_test.rs  discover_test.rs  help_gen_test.rs  project_walker_test.rs  report_test.rs  rs_structure_checks_test.rs  rs_test_checks_test.rs  rs_test_quality_checks_test.rs  test_garde_checks.rs  test_hex_arch_checks.rs  test_r_arch_01.rs  test_release_bin_checks.rs  test_release_checks.rs  test_release_crate_checks.rs  test_release_crate_deps.rs  test_release_repo_checks.rs  test_source_scan.rs  ts_arch_checks_test.rs  ts_ast_helpers_test.rs  ts_code_analysis_test.rs  ts_comment_checks_test.rs  ts_source_scan_test.rs  ts_test_checks_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_discover.rs  fuzz_source_scan.rs
(+10276 files in other folders)
