[package]
name = "guardrail3"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Composable code guardrails for Rust and TypeScript projects"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "guardrail3"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
colored = "2"
walkdir = "2"
