[package]
name = "guardrail3-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[package.metadata.guardrail3]
topology_role = "auxiliary"

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"
toml = "0.8"

[dependencies.guardrail3]
path = "../apps/guardrail3"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
doc = false

[[bin]]
name = "fuzz_source_scan"
path = "fuzz_targets/fuzz_source_scan.rs"
doc = false

[[bin]]
name = "fuzz_discover"
path = "fuzz_targets/fuzz_discover.rs"
doc = false
