[workspace]
members = [
    "crates/types/app-types",
    "crates/logic/family-runner-config",
    "crates/logic/validate-command/crates/assertions",
    "crates/logic/validate-command/crates/runtime",
    "crates/io/inbound/cli/crates/assertions",
    "crates/io/inbound/cli/crates/runtime",
    "crates/io/outbound/packages",
    "crates/io/outbound/report/crates/assertions",
    "crates/io/outbound/report/crates/runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
guardrail3-check-types = { path = "../../packages/shared/guardrail3-check-types" }
g3-workspace-crawl = { path = "../../packages/shared/g3-workspace-crawl", features = ["api"] }
g3ts-eslint-config-checks = { path = "../../packages/ts/eslint/g3ts-eslint-config-checks" }
g3ts-eslint-ingestion = { path = "../../packages/ts/eslint/g3ts-eslint-ingestion" }
g3ts-tsconfig-config-checks = { path = "../../packages/ts/tsconfig/g3ts-tsconfig-config-checks" }
g3ts-tsconfig-ingestion = { path = "../../packages/ts/tsconfig/g3ts-tsconfig-ingestion" }
g3ts-package-config-checks = { path = "../../packages/ts/package/g3ts-package-config-checks" }
g3ts-package-ingestion = { path = "../../packages/ts/package/g3ts-package-ingestion" }
tempfile = "3.18.0"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_macros = "deny"
disallowed_types = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"
missing_docs_in_private_items = "deny"
must_use_candidate = "deny"
option_if_let_else = "deny"
empty_line_after_doc_comments = "deny"
single_match_else = "deny"
ref_option_ref = "deny"
trivially_copy_pass_by_ref = "deny"
redundant_pub_crate = "allow"
