[workspace]
members = [
    "crates/types/app-types",
    "crates/logic/family-runner-config",
    "crates/logic/family-runner-hooks",
    "crates/logic/family-runner-structure",
    "crates/logic/validate-command/crates/assertions",
    "crates/logic/validate-command/crates/runtime",
    "crates/io/inbound/cli/crates/assertions",
    "crates/io/inbound/cli/crates/runtime",
    "crates/io/outbound/packages",
    "crates/io/outbound/report/crates/assertions",
    "crates/io/outbound/report/crates/runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
guardrail3-check-types = { path = "../../packages/shared/guardrail3-check-types" }
g3-workspace-crawl = { path = "../../packages/rs/g3rs-workspace-crawl", package = "g3rs-workspace-crawl", features = ["api"] }
g3ts-astro-content-config-checks = { path = "../../packages/ts/astro/content/g3ts-astro-content-config-checks" }
g3ts-astro-content-file-tree-checks = { path = "../../packages/ts/astro/content/g3ts-astro-content-file-tree-checks" }
g3ts-astro-content-hook-contract = { path = "../../packages/ts/astro/content/g3ts-astro-content-hook-contract" }
g3ts-astro-content-ingestion = { path = "../../packages/ts/astro/content/g3ts-astro-content-ingestion" }
g3ts-astro-mdx-config-checks = { path = "../../packages/ts/astro/mdx/g3ts-astro-mdx-config-checks" }
g3ts-astro-mdx-hook-contract = { path = "../../packages/ts/astro/mdx/g3ts-astro-mdx-hook-contract" }
g3ts-astro-mdx-ingestion = { path = "../../packages/ts/astro/mdx/g3ts-astro-mdx-ingestion" }
g3ts-astro-i18n-config-checks = { path = "../../packages/ts/astro/i18n/g3ts-astro-i18n-config-checks" }
g3ts-astro-i18n-hook-contract = { path = "../../packages/ts/astro/i18n/g3ts-astro-i18n-hook-contract" }
g3ts-astro-i18n-ingestion = { path = "../../packages/ts/astro/i18n/g3ts-astro-i18n-ingestion" }
g3ts-astro-media-config-checks = { path = "../../packages/ts/astro/media/g3ts-astro-media-config-checks" }
g3ts-astro-media-hook-contract = { path = "../../packages/ts/astro/media/g3ts-astro-media-hook-contract" }
g3ts-astro-media-ingestion = { path = "../../packages/ts/astro/media/g3ts-astro-media-ingestion" }
g3ts-astro-seo-config-checks = { path = "../../packages/ts/astro/seo/g3ts-astro-seo-config-checks" }
g3ts-astro-seo-hook-contract = { path = "../../packages/ts/astro/seo/g3ts-astro-seo-hook-contract" }
g3ts-astro-seo-ingestion = { path = "../../packages/ts/astro/seo/g3ts-astro-seo-ingestion" }
g3ts-astro-setup-config-checks = { path = "../../packages/ts/astro/setup/g3ts-astro-setup-config-checks" }
g3ts-astro-setup-file-tree-checks = { path = "../../packages/ts/astro/setup/g3ts-astro-setup-file-tree-checks" }
g3ts-astro-setup-hook-contract = { path = "../../packages/ts/astro/setup/g3ts-astro-setup-hook-contract" }
g3ts-astro-setup-ingestion = { path = "../../packages/ts/astro/setup/g3ts-astro-setup-ingestion" }
g3ts-astro-state-file-tree-checks = { path = "../../packages/ts/astro/state/g3ts-astro-state-file-tree-checks" }
g3ts-astro-state-ingestion = { path = "../../packages/ts/astro/state/g3ts-astro-state-ingestion" }
g3ts-eslint-config-checks = { path = "../../packages/ts/eslint/g3ts-eslint-config-checks" }
g3ts-eslint-ingestion = { path = "../../packages/ts/eslint/g3ts-eslint-ingestion" }
g3ts-tsconfig-config-checks = { path = "../../packages/ts/tsconfig/g3ts-tsconfig-config-checks" }
g3ts-tsconfig-ingestion = { path = "../../packages/ts/tsconfig/g3ts-tsconfig-ingestion" }
g3ts-package-config-checks = { path = "../../packages/ts/package/g3ts-package-config-checks" }
g3ts-package-ingestion = { path = "../../packages/ts/package/g3ts-package-ingestion" }
g3ts-npmrc-config-checks = { path = "../../packages/ts/npmrc/g3ts-npmrc-config-checks" }
g3ts-npmrc-ingestion = { path = "../../packages/ts/npmrc/g3ts-npmrc-ingestion" }
g3ts-jscpd-config-checks = { path = "../../packages/ts/jscpd/g3ts-jscpd-config-checks" }
g3ts-jscpd-ingestion = { path = "../../packages/ts/jscpd/g3ts-jscpd-ingestion" }
g3ts-style-config-checks = { path = "../../packages/ts/style/g3ts-style-config-checks" }
g3ts-style-hook-contract = { path = "../../packages/ts/style/g3ts-style-hook-contract" }
g3ts-style-ingestion = { path = "../../packages/ts/style/g3ts-style-ingestion" }
g3ts-fmt-config-checks = { path = "../../packages/ts/fmt/g3ts-fmt-config-checks" }
g3ts-fmt-hook-contract = { path = "../../packages/ts/fmt/g3ts-fmt-hook-contract" }
g3ts-fmt-ingestion = { path = "../../packages/ts/fmt/g3ts-fmt-ingestion" }
g3ts-hooks-config-checks = { path = "../../packages/ts/hooks/g3ts-hooks-config-checks" }
g3ts-hooks-contract-types = { path = "../../packages/ts/hooks/g3ts-hooks-contract-types" }
g3ts-hooks-file-tree-checks = { path = "../../packages/ts/hooks/g3ts-hooks-file-tree-checks" }
g3ts-hooks-ingestion = { path = "../../packages/ts/hooks/g3ts-hooks-ingestion" }
g3ts-hooks-source-checks = { path = "../../packages/ts/hooks/g3ts-hooks-source-checks" }
g3ts-hooks-types = { path = "../../packages/ts/hooks/g3ts-hooks-types" }
g3ts-arch-config-checks = { path = "../../packages/ts/arch/g3ts-arch-config-checks" }
g3ts-arch-file-tree-checks = { path = "../../packages/ts/arch/g3ts-arch-file-tree-checks" }
g3ts-arch-ingestion = { path = "../../packages/ts/arch/g3ts-arch-ingestion" }
g3ts-arch-source-checks = { path = "../../packages/ts/arch/g3ts-arch-source-checks" }
g3ts-apparch-config-checks = { path = "../../packages/ts/apparch/g3ts-apparch-config-checks" }
g3ts-apparch-ingestion = { path = "../../packages/ts/apparch/g3ts-apparch-ingestion" }
g3ts-apparch-source-checks = { path = "../../packages/ts/apparch/g3ts-apparch-source-checks" }
tempfile = "3.18.0"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_macros = "deny"
disallowed_types = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"
missing_docs_in_private_items = "deny"
must_use_candidate = "deny"
option_if_let_else = "deny"
empty_line_after_doc_comments = "deny"
single_match_else = "deny"
ref_option_ref = "deny"
trivially_copy_pass_by_ref = "deny"
redundant_pub_crate = "allow"
